--- a/src/Services/Phonebook/Phonebook.API/appsettings.json
+++ b/src/Services/Phonebook/Phonebook.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost,1433;User ID=sa;Password=yourStrong(!)Password;Initial Catalog=CustomerDb;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
