--- a/src/Services/CustomerManager/CustomerManager.API/appsettings.json
+++ b/src/Services/CustomerManager/CustomerManager.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost,1433;User ID=sa;Password=yourStrong(!)Password;Initial Catalog=CustomerDb;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=localhost,1433;User ID=sa;Password=yourStrong(!)Password;Initial Catalog=CustomerManagerDb;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
