--- a/src/Services/CustomerManager/CustomerManager.Infrastructure/CustomerManager.Infrastructure.csproj
+++ b/src/Services/CustomerManager/CustomerManager.Infrastructure/CustomerManager.Infrastructure.csproj
@@ -11,7 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Phonebook.Application\CustomerManager.Application.csproj" />
+	  <ProjectReference Include="..\CustomerManager.Application\CustomerManager.Application.csproj" />
 	</ItemGroup>
 
 </Project>
