--- a/src/WebApps/Mc2.CrudTest.Presentation/Client/Mc2.CrudTest.Presentation.Client.csproj
+++ b/src/WebApps/Mc2.CrudTest.Presentation/Client/Mc2.CrudTest.Presentation.Client.csproj
@@ -10,9 +10,18 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.2" PrivateAssets="all" />
+    <PackageReference Include="Syncfusion.Blazor.Core" Version="22.1.38" />
+    <PackageReference Include="Syncfusion.Blazor.Grid" Version="22.1.38" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="22.1.38" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Blazored.Toast" Version="4.1.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
+    <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Services\CustomerManager\CustomerManager.Contracts\CustomerManager.Contracts.csproj" />
     <ProjectReference Include="..\Shared\Mc2.CrudTest.Presentation.Shared.csproj" />
   </ItemGroup>
 
