--- a/src/WebApps/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/src/WebApps/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "companyConfigs": {
+    "CompanyId": "64F3573B-D584-4C36-9119-906E756C24CE"
+  }
 }
