--- a/src/Services/CustomerManager/CustomerManager.API/Properties/launchSettings.json
+++ b/src/Services/CustomerManager/CustomerManager.API/Properties/launchSettings.json
@@ -1,15 +1,5 @@
 {
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5141"
-    },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -18,15 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7010;http://localhost:5141"
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      "applicationUrl": "https://localhost:7010"
     },
     "Docker": {
       "commandName": "Docker",
@@ -36,13 +18,5 @@
       "useSSL": true
     }
   },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:22151",
-      "sslPort": 44335
-    }
-  }
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
