--- a/src/WebApps/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/src/WebApps/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "companyConfigs": {
-    "CompanyId": "64F3573B-D584-4C36-9119-906E756C24CE"
-  }
+  "AllowedHosts": "*"
 }
