Add Docker Compose

--- a/src/Services/CustomerManager/CustomerManager.API/CustomerManager.API.csproj
+++ b/src/Services/CustomerManager/CustomerManager.API/CustomerManager.API.csproj
@@ -7,6 +7,7 @@
 		<UserSecretsId>25c3baa2-33a0-4b35-8ffd-bed5597cf775</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<DockerfileContext>..\..\..\..</DockerfileContext>
+		<DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
