--- a/src/Services/CustomerManager/CustomerManager.API/Dockerfile
+++ b/src/Services/CustomerManager/CustomerManager.API/Dockerfile
@@ -3,20 +3,23 @@
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["src/Services/Phonebook/Phonebook.API/Phonebook.API.csproj", "src/Services/Phonebook/Phonebook.API/"]
-RUN dotnet restore "src/Services/Phonebook/Phonebook.API/Phonebook.API.csproj"
+COPY ["src/Services/CustomerManager/CustomerManager.API/CustomerManager.API.csproj", "src/Services/CustomerManager/CustomerManager.API/"]
+COPY ["src/Services/CustomerManager/CustomerManager.Infrastructure/CustomerManager.Infrastructure.csproj", "src/Services/CustomerManager/CustomerManager.Infrastructure/"]
+COPY ["src/Services/CustomerManager/CustomerManager.Application/CustomerManager.Application.csproj", "src/Services/CustomerManager/CustomerManager.Application/"]
+COPY ["src/Services/CustomerManager/CustomerManager.Contracts/CustomerManager.Contracts.csproj", "src/Services/CustomerManager/CustomerManager.Contracts/"]
+COPY ["src/Services/CustomerManager/CustomerManager.Domain/CustomerManager.Domain.csproj", "src/Services/CustomerManager/CustomerManager.Domain/"]
+RUN dotnet restore "src/Services/CustomerManager/CustomerManager.API/CustomerManager.API.csproj"
 COPY . .
-WORKDIR "/src/src/Services/Phonebook/Phonebook.API"
-RUN dotnet build "Phonebook.API.csproj" -c Release -o /app/build
+WORKDIR "/src/src/Services/CustomerManager/CustomerManager.API"
+RUN dotnet build "CustomerManager.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Phonebook.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "CustomerManager.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Phonebook.API.dll"]
+ENTRYPOINT ["dotnet", "CustomerManager.API.dll"]
